.. Author notes: this file is formatted with restructured text
  (http://docutils.sourceforge.net/docs/user/rst/quickstart.html)
  as it is included in Scrooge's user's guide.

4.x
-----

4.17.0
------

- scrooge-core: To reduce object allocations, `c.t.s.TFieldBlob` now uses `c.t.io.Buf`,
  and add `c.t.s.TReusableBuffer` for providing thread-safe reusable buffer. ``RB_ID=914874``

- scrooge-core: Add dependency on util-core. ``RB_ID=914874``

4.16.0
------

No Changes

4.15.0
------

- scrooge-core: `c.t.s.ThriftUnion` adds methods `containedValue` and
  `unionStructFieldInfo`. These were already a part of the generated Scala
  implementations for unions, but now it is defined on the trait. ``RB_ID=909576``

- scrooge-core: Removed `c.t.s.ThriftStructCodec` deprecated `encoder`
  and `decoder` methods. Use `encode` and `decode` instead. ``RB_ID=``

- scrooge-core: Remove deprecated `encoder` and `decoder` methods
  from `c.t.s.ThriftStructCodec`. Use `encode` and `decode` instead.
  ``RB_ID=909714``

- scrooge-generator: Add parsing, AST, and Scala code generation
  support for annotations on enums, enum fields, services, and
  service methods. ``RB_ID=908556``
- scrooge-generator: Fix default values for collections in scala bindings ``RB_ID=908152``
- scrooge-generator: MethodIfaceBuilder#newMethodIface now returns
  a MethodIface. ``RB_ID=907700``

- scrooge-generator: Scala's types for ServiceIfaces are now a `Service` from
  `ThriftMethod.Args` to `ThriftMethod.SuccessType`, instead of `ThriftMethod.Args`
  to `ThriftMethod.Result`. This is a breaking API change though it should generally
  be easy to adapt existing code to it. ``RB_ID=908846``

4.14.0
------

No Changes

4.13.0
------

- scrooge-linter: Add thrift definition linter warnings if generated
  thrift will exceed JVM HotSpot ClipInlining check.
  ``RB_ID=896379``

4.12.0
------

- scrooge-generator: Remove check for 22 args when generating scala